--- a/TODO.txt
+++ b/TODO.txt
@@ -6,6 +6,7 @@ improvements & bugs
     - validate sb code before running the gen command
     - resolve interfaces with different number of methods, typeA can have less number of methods than typeB
           fix "Builder    interface{}" to "Builder    builder" of "SmartBuilder" struct in "app" package
+    - investigate the initializing of working directory in the goRun function. Can we remove it?
 
 core features
     - add a struct initialization into an item use brackets for overriding global settings, usage: field struct { code }
