Resolved issue of using type of pointer as dependency item

--- a/TODO.txt
+++ b/TODO.txt
@@ -12,3 +12,4 @@ core features
     - add a struct initialization into an item use brackets for overriding global settings, usage: field item { fields }
       the loader (dl) will transform it to use group item with unique group id
     - use a "named type" as parameter (at least for interfaces)
+    - support pointer to a struct, example: field *struct, where field is *struct
